--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "leaflet": "^1.9.4",
     "leaflet-react": "^3.0.5",
     "next": "14.2.3",
